--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -39,6 +39,7 @@ services:
       - PGPASSWORD_READ=${PGPASSWORD_READ}
       - PGPORT_READ=${PGPORT_READ}
       - PGHOST_READ=${PGHOST_READ}
+      - WOT_ENABLED=${WOT_ENABLED}
     networks:
       nostpy_network:
         ipv4_address: 172.28.0.3
