--- a/docker/nginx.conf.template
+++ b/docker/nginx.conf.template
@@ -1,4 +1,3 @@
-
 server {
     listen 443 ssl;
     server_name ${DOMAIN};
@@ -22,6 +21,14 @@ server {
 
     location / {
 
+        # Common proxy settings for all traffic
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_http_version 1.1;
+        proxy_read_timeout 1d;
+        proxy_send_timeout 1d;
 
         # Handle requests for the Nostr relay information (application/nostr+json)
         if ($http_accept ~* "application/nostr\\+json") {
@@ -35,24 +42,10 @@ server {
             proxy_pass http://${DOCKER_SVC}:${SVC_PORT};
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_http_version 1.1;
-            proxy_read_timeout 1d;
-            proxy_send_timeout 1d;
+            break;
         }
 
         # Forward all non-WebSocket traffic to FastAPI
         proxy_pass http://${API_HOST}:${API_PORT};
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        proxy_read_timeout 1d;
-        proxy_send_timeout 1d;
     }
 }
-
