--- a/docker/docker-compose-tor.yaml
+++ b/docker/docker-compose-tor.yaml
@@ -8,9 +8,13 @@ services:
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://opentelemetry-collector:4317
       - EVENT_HANDLER_SVC=${EVENT_HANDLER_SVC}
       - EVENT_HANDLER_PORT=${EVENT_HANDLER_PORT}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
       - WS_PORT=${WS_PORT}
     ports:
       - 8008:8008
+    depends_on:
+      - redis
     networks:
       nostpy_network:
         ipv4_address: 172.28.0.2
