--- a/docker/nginx.conf.template
+++ b/docker/nginx.conf.template
@@ -26,7 +26,7 @@ server {
             add_header 'Content-Type' 'application/json';
         }
 
-        proxy_pass http://WS_HANDLER_SVC:${SVC_PORT};
+        proxy_pass http://${WS_HANDLER_SVC}:${SVC_PORT};
         proxy_http_version 1.1;
         proxy_read_timeout 1d;
         proxy_send_timeout 1d;
