Install nslookup nginx

--- a/docker/Dockerfile.nginx
+++ b/docker/Dockerfile.nginx
@@ -1,7 +1,7 @@
 FROM nginx:latest
 
 RUN apt-get update && \
-    apt-get install -y certbot python3-certbot-nginx && \
+    apt-get install -y certbot python3-certbot-nginx dnsutils && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
