--- a/docker/docker-compose-tor.yaml
+++ b/docker/docker-compose-tor.yaml
@@ -112,6 +112,9 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    networks:
+      nostpy_network:
+        ipv4_address: 172.28.0.9
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt
       - /var/lib/letsencrypt:/var/lib/letsencrypt
