--- a/docker/docker-composer-swarm.yaml
+++ b/docker/docker-composer-swarm.yaml
@@ -1,3 +1,4 @@
+version: '3.9'
 services:
   websocket-handler:
     build:
@@ -48,7 +49,6 @@ services:
       - PGPORT_READ=${PGPORT_READ}
       - PGHOST_READ=${PGHOST_READ}
       - WOT_ENABLED=${WOT_ENABLED}
-      - OTEL_EXPORTER_OTLP_METRICS_TEMPORALITY_PREFERENCE=delta
     ports:
       - target: 8009
         published: 8009
@@ -61,14 +61,12 @@ services:
         delay: 10s
     networks:
       - nostpy_network
-    depends_on:
-      postgres:
-        condition: service_healthy
     logging:
       driver: "json-file"
       options:
         max-size: "10m"
         max-file: "3"
+    depends_on:  # Removed; handled via healthcheck
 
   postgres:
     image: postgres:14
@@ -84,10 +82,11 @@ services:
       - ./postgresql.conf:/postgresql.conf
       - ./postgresql/data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${PGUSER_WRITE}"]
+      test: ["CMD-SHELL", "pg_isready -U ${PGUSER_WRITE} || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
+      start_period: 30s
     logging:
       driver: "json-file"
       options:
@@ -135,8 +134,6 @@ services:
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt
       - /var/lib/letsencrypt:/var/lib/letsencrypt
-    depends_on:
-      - websocket-handler
     logging:
       driver: "json-file"
       options:
