--- a/docker/docker-composer-swarm.yaml
+++ b/docker/docker-composer-swarm.yaml
@@ -66,7 +66,7 @@ services:
       options:
         max-size: "10m"
         max-file: "3"
-    depends_on:  # Removed; handled via healthcheck
+    #depends_on:  # Removed; handled via healthcheck
 
   postgres:
     image: postgres:14
