confine nginx and pg to manager

--- a/docker/docker-composer-swarm.yaml
+++ b/docker/docker-composer-swarm.yaml
@@ -71,6 +71,9 @@ services:
       - POSTGRES_PASSWORD=nostr
     deploy:
       replicas: 1
+      placement:
+        constraints:
+          - node.role == manager
     networks:
       - nostpy_network
     volumes:
@@ -122,6 +125,9 @@ services:
         mode: host
     deploy:
       replicas: 1
+      placement:
+        constraints:
+          - node.role == manager
     networks:
       - nostpy_network
     volumes:
