--- a/docker/Dockerfile.event_handler
+++ b/docker/Dockerfile.event_handler
@@ -8,11 +8,17 @@ RUN apt-get update \
         g++ \
         make \
     && rm -rf /var/lib/apt/lists/*
-WORKDIR /app
 
+RUN groupadd -g 1001 nostpy_user \
+    && useradd -m -u 1001 -g nostpy_user nostpy_user
+
+WORKDIR /app
 COPY eh_requirements.txt .
+RUN chown nostpy_user:nostpy_user /app/eh_requirements.txt
 RUN pip install --no-cache-dir -r eh_requirements.txt
 
 COPY ./nostpy_relay/init_db.py ./nostpy_relay/event*.py ./
+RUN chown -R nostpy_user:nostpy_user /app
 
+USER nostpy_user
 CMD ["python", "event_handler.py"]
